@@ -576,6 +576,8 @@ extern "C"
     OrthancPluginChangeType_StableStudy = 9,        /*!< Timeout: No new instance in this study */
     OrthancPluginChangeType_OrthancStarted = 10,    /*!< Orthanc has started */
     OrthancPluginChangeType_OrthancStopped = 11,    /*!< Orthanc is stopping */
+    OrthancPluginChangeType_UpdatedAttachment = 12, /*!< Some user-defined attachment has changed for this resource */
+    OrthancPluginChangeType_UpdatedMetadata = 13,   /*!< Some user-defined metadata has changed for this resource */
 
     _OrthancPluginChangeType_INTERNAL = 0x7fffffff
   } OrthancPluginChangeType;
